--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less-loader": "^10.0.1",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
+    "open-browser-webpack-plugin": "^0.0.5",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "postcss-reporter": "^7.0.2",
@@ -23,9 +24,11 @@
     "webpack": "^5.53.0",
     "webpack-chain": "^6.5.1",
     "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1",
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode production"
+    "build": "webpack --config webpack.config.js --mode production",
+    "dev": "webpack-dev-server --config webpack.config.js  --mode development --open " 
   }
 }
