--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "autoprefixer": "^10.3.4",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
     "extract-css-loader": "^0.0.1",
     "file-loader": "^6.2.0",
@@ -28,7 +29,7 @@
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js --mode production",
-    "dev": "webpack-dev-server --config webpack.config.js  --mode development --open " 
+    "build": "cross-env FLAG=prod webpack --config webpack.config.js --mode production",
+    "dev": "cross-env FLAG=dev webpack-dev-server --config webpack.config.js  --mode development --open "
   }
 }
